8312434: SPECjvm2008/xml.transform with CDS fails with "can't seal package nu.xom"

Reviewed-by: phh
Backport-of: 9f4a9fe488be7ce43f6719c54df25a1fabd8696a